Remove commons-collections, commons-validator, and commons-io dependencies